@@ -53,30 +53,34 @@ static zbx_uint64_t	select_discovered_host(const DB_EVENT *event)
 	{
 		case EVENT_OBJECT_DHOST:
 			sql = zbx_dsprintf(sql,
-				"select h.hostid"
+				"select h.hostid,h.status"
 				" from hosts h,interface i,dservices ds,dchecks dc,drules dr"
 				" where h.hostid=i.hostid"
 					" and i.ip=ds.ip"
 					" and ds.dcheckid=dc.dcheckid"
 					" and dc.druleid=dr.druleid"
+					" and h.status in (%d,%d)"
 					" and " ZBX_SQL_NULLCMP("dr.proxy_hostid", "h.proxy_hostid")
 					" and i.useip=1"
 					" and ds.dhostid=" ZBX_FS_UI64
 				" order by i.hostid",
+				HOST_STATUS_MONITORED, HOST_STATUS_NOT_MONITORED,
 				event->objectid);
 			break;
 		case EVENT_OBJECT_DSERVICE:
 			sql = zbx_dsprintf(sql,
-				"select h.hostid"
+				"select h.hostid,h.status"
 				" from hosts h,interface i,dservices ds,dchecks dc,drules dr"
 				" where h.hostid=i.hostid"
 					" and i.ip=ds.ip"
 					" and ds.dcheckid=dc.dcheckid"
 					" and dc.druleid=dr.druleid"
+					" and h.status in (%d,%d)"
 					" and " ZBX_SQL_NULLCMP("dr.proxy_hostid", "h.proxy_hostid")
 					" and i.useip=1"
-					" and ds.dserviceid =" ZBX_FS_UI64
+					" and ds.dserviceid=" ZBX_FS_UI64
 				" order by i.hostid",
+				HOST_STATUS_MONITORED, HOST_STATUS_NOT_MONITORED,
 				event->objectid);
 			break;
 		default:
@@ -263,9 +267,11 @@ static zbx_uint64_t	add_discovered_host(const DB_EVENT *event)
 						" from hosts h,interface i,dservices ds"
 						" where h.hostid=i.hostid"
 							" and i.ip=ds.ip"
+							" and h.status in (%d,%d)"
 							" and h.proxy_hostid%s"
 							" and ds.dhostid=" ZBX_FS_UI64
 						" order by h.hostid",
+						HOST_STATUS_MONITORED, HOST_STATUS_NOT_MONITORED,
 						DBsql_id_cmp(proxy_hostid), dhostid);
 
 				if (NULL != (row2 = DBfetch(result2)))
